Fixing some title spacing.

--- a/style.scss
+++ b/style.scss
@@ -384,7 +384,10 @@ article {
 }
 
 .blog_content div.title h3 {
-  margin: 0 0 0 0;
+  margin: 0;
+  font-size: 20px;
+  line-height: 1.3em;
+  padding: 14px 0 0 0;
 }
 
 .blog_content div.title a {
